--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,9 +9,18 @@ services:
       - ../frontend/:/app/result_build/
   nginx:
     image: nginx:1.19.3
+    depends_on:
+      - backend
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+  backend:
+    build: ../backend/
+    volumes:
+      - static_volume:/app/static/
+
+volumes:
+  static_volume:
