--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,36 @@
 server {
     listen 80;
+    server_name 127.0.0.1;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location /static/admin/ {
+        root /var/html/;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/rest_framework/;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+
+    location /api/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -13,16 +40,9 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
-      location /api/ {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
 
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root /var/html/frontend/;
+    }
 }
