--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -24,43 +24,41 @@ jobs:
 #       run: |
 #         python -m flake8
   
-  build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-#     needs: tests
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }} 
-          password: ${{ secrets.DOCKER_PASSWORD }} 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2 
-        with:
-          context: backend/
-          push: true
-          tags: logm3/practicum:latest 
-
-#   deploy:
+#   build_and_push_to_docker_hub:
+#     name: Push Docker image to Docker Hub
 #     runs-on: ubuntu-latest
-#     needs: build_and_push_to_docker_hub
+#     needs: tests
 #     steps:
-#     - name: Repository checkout
-#       uses: actions/checkout@v2
-#     - name: executing remote ssh commands to deploy
-#       uses: appleboy/ssh-action@master
-#       with:
-#         host: ${{ secrets.HOST }}
-#         username: ${{ secrets.USER }}
-#         key: ${{ secrets.SSH_KEY }}
-#         passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
-#         script: |
-#           # Выполняет pull образа с DockerHub
-#           sudo docker pull logm3/practicum
-#           #остановка всех контейнеров
-#           sudo docker stop $(sudo docker ps -a -q)
-#           sudo docker run --rm -d -p 5000:5000 logm3/practicum
+#       - name: Check out the repo
+#         uses: actions/checkout@v2 
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1 
+#       - name: Login to Docker 
+#         uses: docker/login-action@v1 
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }} 
+#           password: ${{ secrets.DOCKER_PASSWORD }} 
+#       - name: Push to Docker Hub
+#         uses: docker/build-push-action@v2 
+#         with:
+#           context: backend/
+#           push: true
+#           tags: logm3/practicum:latest 
+
+  deploy:
+    runs-on: ubuntu-latest
+#     needs: build_and_push_to_docker_hub
+    steps:
+    - name: Repository checkout
+      uses: actions/checkout@v2
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        script: |
+          sudo docker pull logm3/practicum
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 logm3/practicum
