--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -3,51 +3,51 @@ name: Test and deploy
 on: [push]
 
 jobs:
-#   tests:
-#     runs-on: ubuntu-latest
+  tests:
+    runs-on: ubuntu-latest
 
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Set up Python
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: 3.7
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
 
-#     - name: Install dependencies
-#       run: | 
-#         python -m pip install --upgrade pip 
-#         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-#         cd backend/foodgram/
-#         pip install -r requirements.txt 
+    - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip 
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        cd backend/foodgram/
+        pip install -r requirements.txt 
 
-#     - name: Test with flake8
-#       run: |
-#         python -m flake8
+    - name: Test with flake8
+      run: |
+        python -m flake8
   
-#   build_and_push_to_docker_hub:
-#     name: Push Docker image to Docker Hub
-#     runs-on: ubuntu-latest
-#     needs: tests
-#     steps:
-#       - name: Check out the repo
-#         uses: actions/checkout@v2 
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1 
-#       - name: Login to Docker 
-#         uses: docker/login-action@v1 
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }} 
-#           password: ${{ secrets.DOCKER_PASSWORD }} 
-#       - name: Push to Docker Hub
-#         uses: docker/build-push-action@v2 
-#         with:
-#           context: backend/
-#           push: true
-#           tags: logm3/practicum:latest 
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }} 
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2 
+        with:
+          context: backend/
+          push: true
+          tags: logm3/practicum:latest 
 
   deploy:
     runs-on: ubuntu-latest
-#     needs: build_and_push_to_docker_hub
+    needs: build_and_push_to_docker_hub
     steps:
     - name: Repository checkout
       uses: actions/checkout@v2
