--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,5 +4,7 @@ COPY foodgram/requirements.txt .
 RUN apt-get update && apt-get install -y pkg-config libcairo2-dev gcc
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY foodgram .
+RUN python manage.py makemigrations
+RUN python manage.py migrate
 RUN python manage.py collectstatic --no-input
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
