--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -3,31 +3,31 @@ name: Test and deploy
 on: [push]
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-
-    - name: Install dependencies
-      run: | 
-        python -m pip install --upgrade pip 
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        cd backend/foodgram/
-        pip install -r requirements.txt 
-
-    - name: Test with flake8
-      run: |
-        python -m flake8
+#  tests:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Set up Python
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: 3.7
+#
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+#        cd backend/foodgram/
+#        pip install -r requirements.txt
+#
+#    - name: Test with flake8
+#      run: |
+#        python -m flake8
   
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: tests
+#    needs: tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 
@@ -45,22 +45,22 @@ jobs:
           push: true
           tags: logm3/practicum:latest 
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    steps:
-    - name: Repository checkout
-      uses: actions/checkout@v2
-    - name: executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        script: |
-          sudo docker pull logm3/practicum
-          sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 logm3/practicum
-          sudo docker container exec infra-backend-1 python manage.py makemigrations
-          sudo docker container exec infra-backend-1 python manage.py migrate
+#  deploy:
+#    runs-on: ubuntu-latest
+#    needs: build_and_push_to_docker_hub
+#    steps:
+#    - name: Repository checkout
+#      uses: actions/checkout@v2
+#    - name: executing remote ssh commands to deploy
+#      uses: appleboy/ssh-action@master
+#      with:
+#        host: ${{ secrets.HOST }}
+#        username: ${{ secrets.USER }}
+#        key: ${{ secrets.SSH_KEY }}
+#        passphrase: ${{ secrets.PASSPHRASE }}
+#        script: |
+#          sudo docker pull logm3/practicum
+#          sudo docker stop $(sudo docker ps -a -q)
+#          sudo docker run --rm -d -p 5000:5000 logm3/practicum
+#          sudo docker container exec infra-backend-1 python manage.py makemigrations
+#          sudo docker container exec infra-backend-1 python manage.py migrate
