--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -32,6 +32,7 @@ services:
 
   backend:
     image: logm3/practicum:latest
+#    build: ../backend
     volumes:
       - static_volume:/app/static/
       - media_volume:/app/media/
