--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -31,8 +31,7 @@ services:
       - static_volume:/var/html/static/
 
   backend:
-#    image: logm3/practicum:latest
-    build: ../backend
+    image: logm3/practicum:latest
     volumes:
       - static_volume:/app/static/
       - media_volume:/app/media/
